# task2habitica-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  INSTALL.md  LICENSE  README.md  cliff.toml  rustfmt.toml
.github/workflows/: ci.yml  create-tag.yml  prepare-release.yml  release.yml
hooks/: on-add.task2habitica  on-exit.task2habitica  on-modify.task2habitica
src/: config.rs  error.rs  lib.rs  main.rs
src/commands/: add.rs  exit.rs  mod.rs  modify.rs  sync.rs
src/habitica/: client.rs  mod.rs  stats.rs  task.rs
src/sync/: converter.rs  mod.rs  resolver.rs
src/taskwarrior/: client.rs  date_format.rs  mod.rs  notes.rs  task.rs
